добавила фавикон и подключила bootstrap

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0 auto;
+}
+
 .container {
     width: 1140px;
     margin: 0 auto;
@@ -16,9 +20,10 @@ a {
 }
 
 #cover {
-    height: 763px;
     display: flex;
     align-items: center;
     background-image: url(/pics/cover.png);
     color: white;
+    height: 100vh;
+    background-size: cover;
 }
