--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 body {
+    font-family: "Jost", sans-serif;
     margin: 0 auto;
+    background-image: url(pics/cover.png);
+    width: 100vh;
+    background-size: cover;
 }
 
 .container {
-    width: 1140px;
-    margin: 0 auto;
+    justify-content: flex-start;
+    align-content: center;
 }
 
 header {
@@ -22,8 +26,9 @@ a {
 #cover {
     display: flex;
     align-items: center;
-    background-image: url(/pics/cover.png);
     color: white;
-    height: 100vh;
-    background-size: cover;
+}
+
+.container nav {
+    font-size: 24px;
 }
