--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 body {
     font-family: "Jost", sans-serif;
     margin: 0 auto;
-    width: 100vh;
-    background-size: cover;
+    padding: 0;
+
 }
 
 .container {
@@ -13,9 +13,16 @@ body {
 }
 
 header {
+    height: 87px;
+    position: absolute;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: rgba(0, 0, 0, 0);
+    top: 0;
+    left: 0;
+    right: 0;
+
 }
 
 a {
@@ -25,15 +32,24 @@ a {
 }
 
 #cover {
-    height: 763px;
+    height: 831px;
+    position: relative;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
     background-image: url(pics/cover.png);
-    background-size: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .about-us-content {
     display: flex;
+}
+
+.about-us-content img {
+    height: 600px;
 }
 
 .card {
@@ -50,19 +66,24 @@ a {
     display: flex;
     justify-content: space-between;
 }
- #form {
+
+#form {
+    margin: 0;
+    padding: 0;
+    width: auto;  
     height: 626px;
-    background-image: url(/pics/cityVector.svg);
-    background-color: #172142;
-    background-position: center;
+    background-image: url(/pics/feedback_form.svg);
+    background-position: left;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
- }
+}
 
- form {
+form {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
- }
+}
