--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Jost", sans-serif;
     margin: 0 auto;
@@ -37,19 +41,68 @@ a {
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    background-image: url(pics/cover.png);
+    background: url(pics/cover.png) no-repeat center;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+}
+
+.main_text {
+    font-weight: 300;
+    font-size: 16pt;
+}
+
+.subtitle {
+    font-weight: 400;
+    font-size: 36pt;
+}
+
+.cover-content p {
+    font-weight: 400;
+    font-size: 16pt;
+}
+
+.cover-content {
+    color: white;
+}
+
+.cover-content h1 {
+    font-weight: 400;
+    font-size: 54pt;
+}
+
+.about-us-content p {
+    font-weight: 300;
+    font-size: 14pt;
+}
+
+
+.about-us-text {
+    align-content: center;
+    margin-left: 20px;
 }
 
 .about-us-content {
     display: flex;
+    margin-top: 97px;
+    margin-bottom: 97px;
+
+}
+
+.price {
+    font-weight: 600;
+    font-size: 22pt;
 }
 
 .about-us-content img {
     height: 600px;
 }
+
+h3,
+h5 {
+    font-weight: 400;
+    font-size: 18pt
+}
+
+
 
 .card {
     width: 365px;
@@ -63,13 +116,21 @@ a {
 
 .cards {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 50px;
+    border: none;
+}
+
+.news {
+    display: flex;
+    justify-content: center;
 }
 
 #form {
     margin: 0;
     padding: 0;
-    width: auto;  
+    width: auto;
     height: 626px;
     background-image: url(/pics/feedback_form.png);
     background-position: left;
@@ -90,7 +151,7 @@ form {
 #form2 {
     margin: 0;
     padding: 0;
-    width: auto;  
+    width: auto;
     height: 626px;
     background-image: url(/pics/contacts.png);
     background-position: left;
@@ -101,20 +162,60 @@ form {
 }
 
 button {
-    height: 57px;  
+    height: 57px;
     width: 364px;
 }
 
-footer{
+.footer {
+    display: flex;
+    justify-content: space-between;
     height: 390px;
-    
+    display: flex;
+    align-items: center;
 }
 
-.contacts {
+.footer_menu {
     display: flex;
     flex-direction: column;
+    gap: 5px;
+    text-align: end;
+    list-style-type: none;
+    margin-top: 40px;
+    font-size: 12pt;
+    font-weight: 300;
 }
 
-#forma {
+li {
+    margin-top: 4px;
+    margin-bottom: 4px;
+}
 
+.footer_left {
+    display: block;
+    align-items: center;
+    gap: 20px;
+
+}
+
+.footer_logo {
+    width: auto;
+    display: flex;
+    align-items: center;
+    padding: 16px 0;
+}
+
+.footer_logo img {
+    vertical-align: middle;
+    height: 42px;
+}
+
+.footer_right {
+    text-align: right;
+}
+
+.copyrights {
+    margin: 0px;
+    font-size: 12pt;
+    line-height: 1.4;
+    font-weight: 300;
 }
