--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ h5 {
     padding: 0;
     width: auto;
     height: 626px;
-    background-image: url(/pics/feedback_form.png);
+    background-image: url(pics/feedback_form.png);
     background-position: left;
     display: flex;
     align-items: center;
@@ -153,7 +153,7 @@ form {
     padding: 0;
     width: auto;
     height: 626px;
-    background-image: url(/pics/contacts.png);
+    background-image: url(pics/contacts.png);
     background-position: left;
     display: flex;
     align-items: center;
