--- a/style.css
+++ b/style.css
@@ -26,6 +26,15 @@ header {
     top: 0;
     left: 0;
     right: 0;
+    font-size: 14pt;
+}
+
+header a {
+    color: white;
+}
+
+header a:hover {
+    color: #8AEDFF;
 }
 
 a {
@@ -36,9 +45,7 @@ a {
 
 #cover {
     height: 831px;
-    position: relative;
     display: flex;
-    align-items: flex-start;
     justify-content: center;
     flex-direction: column;
     background: url(pics/cover.png) no-repeat center;
@@ -47,7 +54,11 @@ a {
 
 .main_text {
     font-weight: 300;
-    font-size: 16pt;
+    font-size: 14pt;
+}
+
+.main_text p {
+    margin-bottom: 4px;
 }
 
 .subtitle {
@@ -58,6 +69,8 @@ a {
 .cover-content p {
     font-weight: 400;
     font-size: 16pt;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .cover-content {
@@ -102,10 +115,9 @@ h5 {
     font-size: 18pt
 }
 
-
-
 .card {
-    width: 365px;
+    border: none !important;
+    box-shadow: none !important;
 }
 
 .card_headline {
@@ -120,6 +132,7 @@ h5 {
     gap: 20px;
     margin-bottom: 50px;
     border: none;
+    outline: none;
 }
 
 .news {
@@ -148,6 +161,47 @@ form {
     align-items: center;
 }
 
+#form h2 {
+    font-weight: 300;
+    font-size: 40pt;
+    color: white;
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+input {
+    margin-top: 10px;
+    margin-bottom: 25px;
+    box-sizing: border-box;
+    width: 363px;
+    height: 56px;
+    border: 2px solid #FFFFFF;
+    border-radius: 8px;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+input::placeholder {
+    width: 334px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 29px;
+    color: #C8C8C8;
+    text-indent: 15px;
+}
+
+label {
+    width: 330px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 23px;
+    color: #FFFFFF;
+}
+
+#blog {
+    margin-top: 97px;
+}
+
 #form2 {
     margin: 0;
     padding: 0;
@@ -161,9 +215,21 @@ form {
     flex-direction: column;
 }
 
-button {
-    height: 57px;
+#form2 h2 {
+    font-weight: 300;
+    font-size: 40pt;
+    color: white;
+    text-align: left;
+    margin-bottom: 25px;
+}
+
+.btn-info {
+    position: absolute;
     width: 364px;
+    background: #8AEDFF;
+    border-radius: 15px;
+    font-size: 36px;
+    color: #00143A;
 }
 
 .footer {
